--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Landing Page</title>
     <style>
+	*{
+		border: 0;
+		margin: 0;
+	
+	}
+	body{
+		background-image: -webkit-image-set("web.jpg")
+	}
         /* Basic styling for the navigation bar */
         nav ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
             background-color: #333;
-            overflow: hidden;
+            overflow: hidden;	    
         }
 
         nav ul li {
@@ -29,9 +37,10 @@
         nav ul li a:hover {
             background-color: #111;
         }
-	h1{
+	a p h1{
 		text-align: center;
 	}
+
 
     </style>
     </head>
@@ -46,7 +55,7 @@
     <p>This data collecting app will help startup schools to be able to allow aspiring students to register online with minimum rest
     </p>
     <!-- Button linking to the About page -->
-    <a href="ALX" class="about-button">ALX</a>
+    <a href="ALX" class="ALX-button">ALX</a>
 
 </body>
 </html>
