--- a/ALX.html
+++ b/ALX.html
@@ -11,7 +11,7 @@
 
         }
         body{
-                background-image: -webkit-image-set("web.jpg")
+                background-image: -webkit-image-set("Background.jpg")
         }
         /* Basic styling for the navigation bar */
         nav ul {
@@ -37,7 +37,7 @@
         nav ul li a:hover {
             background-color: #111;
         }
-        a p h1{
+        a p h1 h2{
                 text-align: center;
         }
 
@@ -51,7 +51,7 @@
             <li><a href="ALX">ALX</a></li>
         </ul>
     </nav>
-    <img src= "Form.html" alt= "deploy form" width="300px" height= "467px">
+    <img src= "Form.png" alt= "deploy form" width="300px" height= "467px">
     <p>This is the student registration form were the student should enter data for school registration</p>
     <h2>About the project</p>
 	    <p>This project is one of fundamental tools that are required by schools for ease or reduce the level of students having to visit the college for mere sake of putting through a registration. i my line of work I have been exposed mostly to goverment colleges in south Africa they are refered to as TVET college. These are vocational schools in that the mainly expose students to a more paractical side of work exposing students to work environment. However i have noted a gap in the level of automatiom being implemented at these institutions in that most student fail to register on time due to overloaded campuses by students during the periods of school registrations</p>
